add shuffle on df

--- a/clean_to_elasticserch.ipynb
+++ b/clean_to_elasticserch.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,20 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\nWall time: 5.48 µs\n"
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\nWall time: 6.44 µs\n"
      ]
     }
    ],
    "source": [
     "%time\n",
-    "def generate(median=630, err=12, outlier_err=200, size=30000, outlier_size=1200):\n",
+    "def generate(median=630, err=12, outlier_err=400, size=30000, outlier_size=1500):\n",
     "    flow_errs = err * np.random.rand(size) * np.random.choice((-1, 1), size)\n",
     "    flow_good = median + flow_errs\n",
     "    sessions_good = np.random.rand(size) * 10 + 1\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {
     "tags": []
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,17 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ts'] = pd.date_range(\"2021-01-27 10:28:00\", periods=32400, freq=\"s\")\n",
+    "df['ts'] = pd.date_range(\"2021-01-27 9:28:00\", periods=32400, freq=\"min\")\n",
     "df['id'] = np.linspace(1, 32400, 32400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 96
     }
    ],
    "source": [
