--- a/clean_to_elasticserch.ipynb
+++ b/clean_to_elasticserch.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,11 @@
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch import helpers\n",
     "import ipaddress\n",
-    "es_client = Elasticsearch(http_compress=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import random\n",
     "from random import randrange\n",
+    "\n",
+    "SIZE = 30000\n",
+    "OUTLIER_SIZE = 1500\n",
     "\n",
     "def generateIP():\n",
     "    blockOne = randrange(0, 255, 1)\n",
@@ -51,72 +45,72 @@
     "    blockThree = randrange(0, 255, 1)\n",
     "    blockFour = randrange(0, 255, 1)\n",
     "\n",
-    "    return str(blockOne) + '.' + str(blockTwo) + '.' + str(blockThree) + '.' + str(blockFour)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\nWall time: 6.44 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time\n",
-    "def generate(median=630, err=12, outlier_err=400, size=30000, outlier_size=1500):\n",
+    "    return str(blockOne) + '.' + str(blockTwo) + '.' + str(blockThree) + '.' + str(blockFour)\n",
+    "\n",
+    "def generate(median=630, err=12, outlier_err=400, size=SIZE, outlier_size=OUTLIER_SIZE):\n",
+    "\n",
+    "    # Generate flow logs <float>\n",
     "    flow_errs = err * np.random.rand(size) * np.random.choice((-1, 1), size)\n",
     "    flow_good = median + flow_errs\n",
-    "    sessions_good = np.random.rand(size) * 10 + 1\n",
-    "    sessions_good = np.round(sessions_good,0)\n",
-    "    combined_good = np.vstack((flow_good, sessions_good)).T \n",
-    "\n",
     "\n",
     "    flow_lower_errs = outlier_err * np.random.rand(outlier_size)\n",
     "    flow_lower_outliers = median - err -flow_lower_errs\n",
-    "    sessions_lower_outliers = np.random.rand(outlier_size) * 1 + 1\n",
-    "    sessions_lower_outliers = np.round(sessions_lower_outliers,0)\n",
-    "    combined_lower = np.vstack((flow_lower_outliers, sessions_lower_outliers)).T\n",
     "\n",
     "    flow_upper_errs = outlier_err * np.random.rand(outlier_size)\n",
     "    flow_upper_outliers = median + err + flow_upper_errs\n",
+    "\n",
+    "    # Generate session logs <int>    \n",
+    "    sessions_good = np.random.rand(size) * 10 + 1\n",
+    "    sessions_good = np.round(sessions_good,0)\n",
+    "\n",
+    "    sessions_lower_outliers = np.random.rand(outlier_size) * 1 + 1\n",
+    "    sessions_lower_outliers = np.round(sessions_lower_outliers,0)\n",
+    "\n",
     "    sessions_upper_outliers = np.random.rand(outlier_size) * 1000\n",
     "    sessions_upper_outliers = np.round(sessions_upper_outliers,0)\n",
+    "\n",
+    "    # Combine np.array \n",
+    "\n",
+    "    combined_good = np.vstack((flow_good, sessions_good)).T \n",
+    "    combined_lower = np.vstack((flow_lower_outliers, sessions_lower_outliers)).T\n",
     "    combined_upper = np.vstack((flow_upper_outliers, sessions_upper_outliers)).T\n",
     "\n",
     "    data = np.concatenate((combined_good, combined_lower, combined_upper))\n",
-    "    #   np.random.shuffle(data)\n",
+    "    #np.random.shuffle(data)\n",
     "\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = generate()\n",
     "df = pd.DataFrame(data=generate())\n",
     "# \"nb_sessions\", \"nb_src_ip\", \"nb_dest_ip\", \"sum_url\", \"sum_bytes_toclient\", \"sum_bytes_toserver\", \"ratio_server_client\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 119,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\nWall time: 5.48 µs\n"
+     ]
+    }
+   ],
    "source": [
+    "%time\n",
     "df['source_ip'] = '190.166.13.79'\n",
     "for i in df.index:\n",
-    "    if i < 30000:\n",
+    "    if i < SIZE:\n",
     "        df.loc[i, 'source_ip'] = '192.11.13.'+ str(random.randrange(150, 180))\n",
     "    else:\n",
     "        df.loc[i, 'source_ip'] = generateIP()"
@@ -124,38 +118,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['outliers'] = 0\n",
-    "df[30000:]['outliers'] = 1"
+    "df[SIZE:]['outliers'] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.rename(columns = {0 : \"sum_bytes_toclient\", 1 : \"nb_sessions\"})\n",
     "df['sum_bytes_toclient'] = df['sum_bytes_toclient'].round(0)\n",
-    "df = df.astype({'sum_bytes_toclient': int, 'nb_sessions': int, 'source_ip': str})"
+    "df = df.astype({'sum_bytes_toclient': int, 'nb_sessions': int, 'source_ip': str})\n",
+    "df = df.sample(frac=1).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ts'] = pd.date_range(\"2021-01-27 9:28:00\", periods=32400, freq=\"min\")\n",
-    "df['id'] = np.linspace(1, 32400, 32400)"
+    "df['ts'] = pd.date_range(\"2021-01-27 9:28:00\", periods= SIZE + OUTLIER_SIZE * 2 , freq=\"min\")\n",
+    "df['id'] = np.linspace(1, SIZE + OUTLIER_SIZE*2, SIZE + OUTLIER_SIZE*2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,21 +161,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(32400, [])"
+       "(33000, [])"
       ]
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 106
     }
    ],
    "source": [
+    "es_client = Elasticsearch(http_compress=True)\n",
     "def doc_generator(df):\n",
     "    df_iter = df.iterrows()\n",
     "    for index, document in df_iter:\n",
